--- a/source/_scss/_layout.scss
+++ b/source/_scss/_layout.scss
@@ -1,7 +1,7 @@
 /*=====================================
 =            Layout styles            =
 =====================================*/
-@import url("//fonts.googleapis.com/css?family=Open+Sans:400,300,700");
+// @import url("//fonts.googleapis.com/css?family=Open+Sans:400,300,700");
 
 html,
 body {
