--- a/source/_scss/_syntax.scss
+++ b/source/_scss/_syntax.scss
@@ -1,92 +1,66 @@
-.highlight {
-  @extend %clearfix;
-
-  &, .hll, pre, code {
-    border: none;
-  }
-
-  pre {
-    margin: 0;
-    padding: 1.1em;
-    white-space: pre;
-    line-height: 21px;
-    overflow-x: auto;
-    margin-bottom: 0;
-    word-break: inherit;
-    word-wrap: inherit;
-
-    code {
-      white-space: pre;
-      padding: 0 !important;
-
-      * {
-        white-space: nowrap; // this sets all children inside to nowrap
-      }
-    }
-  }
-
-
-  .c { color: #75715e } /* Comment */
-  .err { color: #1a0000 } /* Error */
-  .k { color: #84045b } /* Keyword */
-  .l { color: #ae81ff } /* Literal */
-  .n { color: #080802 } /* Name */
-  .o { color: #6c0028 } /* Operator */
-  .p { color: #080802 } /* Punctuation */
-  .cm { color: #75715e } /* Comment.Multiline */
-  .cp { color: #75715e } /* Comment.Preproc */
-  .c1 { color: #75715e } /* Comment.Single */
-  .cs { color: #75715e } /* Comment.Special */
-  .ge { font-style: italic } /* Generic.Emph */
-  .gs { font-weight: bold } /* Generic.Strong */
-  .kc { color: #005465 } /* Keyword.Constant */
-  .kd { color: #39367e } /* Keyword.Declaration */
-  .kn { color: #f92672 } /* Keyword.Namespace */
-  .kp { color: #2629ef } /* Keyword.Pseudo */
-  .kr { color: #16292f } /* Keyword.Reserved */
-  .kt { color: #b908bc } /* Keyword.Type */
-  .ld { color: #8c7f09 } /* Literal.Date */
-  .m { color: #ae81ff } /* Literal.Number */
-  .s { color: #a2930c } /* Literal.String */
-  .na { color: #a6e22e } /* Name.Attribute */
-  .nb { color: #989808 } /* Name.Builtin */
-  .nc { color: #a6e22e } /* Name.Class */
-  .no { color: #66d9ef } /* Name.Constant */
-  .nd { color: #72a014 } /* Name.Decorator */
-  .ni { color: #9d038b } /* Name.Entity */
-  .ne { color: #008e2d } /* Name.Exception */
-  .nf { color: #679a01 } /* Name.Function */
-  .nl { color: #ab0101 } /* Name.Label */
-  .nn { color: #bf6301 } /* Name.Namespace */
-  .nx { color: #5f0387 } /* Name.Other */
-  .py { color: #012bfe } /* Name.Property */
-  .nt { color: #a5003d } /* Name.Tag */
-  .nv { color: #ce3e00 } /* Name.Variable */
-  .ow { color: #a4003c } /* Operator.Word */
-  .w { color: #767602 } /* Text.Whitespace */
-  .mf { color: #ae81ff } /* Literal.Number.Float */
-  .mh { color: #27006f } /* Literal.Number.Hex */
-  .mi { color: #4e03da } /* Literal.Number.Integer */
-  .mo { color: #4300bf } /* Literal.Number.Oct */
-  .sb { color: #915701 } /* Literal.String.Backtick */
-  .sc { color: #025e3b } /* Literal.String.Char */
-  .sd { color: #877900 } /* Literal.String.Doc */
-  .s2 { color: #4f4700 } /* Literal.String.Double */
-  .se { color: #ae81ff } /* Literal.String.Escape */
-  .sh { color: #574f04 } /* Literal.String.Heredoc */
-  .si { color: #5c5301 } /* Literal.String.Interpol */
-  .sx { color: #805101 } /* Literal.String.Other */
-  .sr { color: #524a00 } /* Literal.String.Regex */
-  .s1 { color: #675c00 } /* Literal.String.Single */
-  .ss { color: #847600 } /* Literal.String.Symbol */
-  .bp { color: #2e0700 } /* Name.Builtin.Pseudo */
-  .vc { color: #3800a9 } /* Name.Variable.Class */
-  .vg { color: #595900 } /* Name.Variable.Global */
-  .vi { color: #9e02ff } /* Name.Variable.Instance */
-  .il { color: #ae81ff } /* Literal.Number.Integer.Long */
-
-  // .gh { } /* Generic Heading & Diff Header */
-  .gu { color: #75715e; } /* Generic.Subheading & Diff Unified/Comment? */
-  .gd { color: #820231; } /* Generic.Deleted & Diff Deleted */
-  .gi { color: #5c8a00; } /* Generic.Inserted & Diff Inserted */
-}
+.highlight .hll { background-color: #ffffcc }
+.highlight  { background: #ffffff; }
+.highlight .c { color: #aaaaaa; font-style: italic } /* Comment */
+.highlight .err { color: #FF0000; background-color: #FFAAAA } /* Error */
+.highlight .k { color: #0000aa } /* Keyword */
+.highlight .ch { color: #aaaaaa; font-style: italic } /* Comment.Hashbang */
+.highlight .cm { color: #aaaaaa; font-style: italic } /* Comment.Multiline */
+.highlight .cp { color: #4c8317 } /* Comment.Preproc */
+.highlight .cpf { color: #aaaaaa; font-style: italic } /* Comment.PreprocFile */
+.highlight .c1 { color: #aaaaaa; font-style: italic } /* Comment.Single */
+.highlight .cs { color: #0000aa; font-style: italic } /* Comment.Special */
+.highlight .gd { color: #aa0000 } /* Generic.Deleted */
+.highlight .ge { font-style: italic } /* Generic.Emph */
+.highlight .gr { color: #aa0000 } /* Generic.Error */
+.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
+.highlight .gi { color: #00aa00 } /* Generic.Inserted */
+.highlight .go { color: #888888 } /* Generic.Output */
+.highlight .gp { color: #555555 } /* Generic.Prompt */
+.highlight .gs { font-weight: bold } /* Generic.Strong */
+.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+.highlight .gt { color: #aa0000 } /* Generic.Traceback */
+.highlight .kc { color: #0000aa } /* Keyword.Constant */
+.highlight .kd { color: #0000aa } /* Keyword.Declaration */
+.highlight .kn { color: #0000aa } /* Keyword.Namespace */
+.highlight .kp { color: #0000aa } /* Keyword.Pseudo */
+.highlight .kr { color: #0000aa } /* Keyword.Reserved */
+.highlight .kt { color: #00aaaa } /* Keyword.Type */
+.highlight .m { color: #009999 } /* Literal.Number */
+.highlight .s { color: #aa5500 } /* Literal.String */
+.highlight .na { color: #1e90ff } /* Name.Attribute */
+.highlight .nb { color: #00aaaa } /* Name.Builtin */
+.highlight .nc { color: #00aa00; text-decoration: underline } /* Name.Class */
+.highlight .no { color: #aa0000 } /* Name.Constant */
+.highlight .nd { color: #888888 } /* Name.Decorator */
+.highlight .ni { color: #880000; font-weight: bold } /* Name.Entity */
+.highlight .nf { color: #00aa00 } /* Name.Function */
+.highlight .nn { color: #00aaaa; text-decoration: underline } /* Name.Namespace */
+.highlight .nt { color: #1e90ff; font-weight: bold } /* Name.Tag */
+.highlight .nv { color: #aa0000 } /* Name.Variable */
+.highlight .ow { color: #0000aa } /* Operator.Word */
+.highlight .w { color: #bbbbbb } /* Text.Whitespace */
+.highlight .mb { color: #009999 } /* Literal.Number.Bin */
+.highlight .mf { color: #009999 } /* Literal.Number.Float */
+.highlight .mh { color: #009999 } /* Literal.Number.Hex */
+.highlight .mi { color: #009999 } /* Literal.Number.Integer */
+.highlight .mo { color: #009999 } /* Literal.Number.Oct */
+.highlight .sa { color: #aa5500 } /* Literal.String.Affix */
+.highlight .sb { color: #aa5500 } /* Literal.String.Backtick */
+.highlight .sc { color: #aa5500 } /* Literal.String.Char */
+.highlight .dl { color: #aa5500 } /* Literal.String.Delimiter */
+.highlight .sd { color: #aa5500 } /* Literal.String.Doc */
+.highlight .s2 { color: #aa5500 } /* Literal.String.Double */
+.highlight .se { color: #aa5500 } /* Literal.String.Escape */
+.highlight .sh { color: #aa5500 } /* Literal.String.Heredoc */
+.highlight .si { color: #aa5500 } /* Literal.String.Interpol */
+.highlight .sx { color: #aa5500 } /* Literal.String.Other */
+.highlight .sr { color: #009999 } /* Literal.String.Regex */
+.highlight .s1 { color: #aa5500 } /* Literal.String.Single */
+.highlight .ss { color: #0000aa } /* Literal.String.Symbol */
+.highlight .bp { color: #00aaaa } /* Name.Builtin.Pseudo */
+.highlight .fm { color: #00aa00 } /* Name.Function.Magic */
+.highlight .vc { color: #aa0000 } /* Name.Variable.Class */
+.highlight .vg { color: #aa0000 } /* Name.Variable.Global */
+.highlight .vi { color: #aa0000 } /* Name.Variable.Instance */
+.highlight .vm { color: #aa0000 } /* Name.Variable.Magic */
+.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
