--- a/source/_scss/main.scss
+++ b/source/_scss/main.scss
@@ -1,12 +1,5 @@
-/*!
- * end2end - jekyll theme free
- * https://github.com/nandomoreirame/end2end
- * MIT License
- */
-
 @import "bourbon/bourbon";
 @import "neat/neat";
-
 @import "variables";
 @import "normalize";
 @import "base/reset";
@@ -52,11 +45,10 @@
 }
 
 
-img {
-    max-width: 100%;
-}
+img {  max-width: 100%; }
 
 
+h1 { margin: 0.67em 0.3em; }
 h2,
 h3 {
   margin-top: 2rem;
@@ -64,8 +56,6 @@ h3 {
   font-weight: normal;
   color: $section-headings-color;
 }
-
-
 h4,
 h5,
 h6 {
@@ -75,24 +65,9 @@ h6 {
   color: $section-headings-color;
 }
 
-h1 {
-    font-size: 1.8rem;
-}
-
-h2 {
-    font-size: 1.6rem;
-}
-
-h3 {
-    font-size: 1.3rem;
-}
-
-h4 {
-    font-size: 1.2rem;
-}
-
-h5,
-h6 {
-    font-size: 1.1rem;
-}
-
+h1 { font-size: 2.2rem; }
+h2 { font-size: 1.8rem; }
+h3 { font-size: 1.5rem; }
+h4 { font-size: 1.3rem; }
+h5 { font-size: 1.2rem; }
+h6 { font-size: 1.1rem; }
