--- a/source/_scss/normalize.scss
+++ b/source/_scss/normalize.scss
@@ -20,7 +20,7 @@ body {
   margin: 0;
 }
 
-.post-content blockquote{
+.post-content blockquote p{
   padding-top: 0.5em;
   padding-bottom: 0.1em;
   padding-left: 1.0em;
