--- a/source/_scss/_layout.scss
+++ b/source/_scss/_layout.scss
@@ -219,12 +219,8 @@ body.home {
     }
   }
 
-  h3, em {
+  h3 {
     font-weight: $font-weight-light;
-  }
-
-  em {
-    color: $primary-color;
   }
 
   strong {
